--- a/partials/index.html
+++ b/partials/index.html
@@ -3,6 +3,12 @@
 <div class="row">
   <ng-include src="'partials/template/navbar.html'"></ng-include>
   <div id="contents" class="col-md-8 col-sm-12">
+    <div id="eventList">
+      <h2>最近登録されたEvent</h2>
+      <div ng-repeat=" entry in newEntry">
+	<a href="#/event/{{getID(entry.id.$t)}}"><h3>{{entry.title.$t}}</h3></a>
+      </div>
+    </div>
     <div class="row">
       <!--
       <div class="col-md-4">
