--- a/partials/index.html
+++ b/partials/index.html
@@ -8,6 +8,7 @@
       <div ng-repeat=" entry in newEntry">
 	<a href="#/event/{{getID(entry.id.$t)}}"><h3>{{entry.title.$t}}</h3></a>
       </div>
+      <span class="pull-right"><a href="#/event/more">More</a></span>
     </div>
     <div class="row">
       <!--
