--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -1,14 +1,14 @@
 <div id="rNavi" class="col-md-3 col-sm-12">
   <div class="site-title">
-    <h1><a href="#">Hackathon Event Info</a></h1>
+    <h1><a href="#!">Hackathon Event Info</a></h1>
   </div>
   <p>Hackathon(ハッカソン)まとめ</p>
   <div class="fb-like" data-href="http://hackathon.style-info.org/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
   
   <ul class="nav nav-pills nav-stacked">
-    <li><a href="#">ホーム</a></li>
-    <li><a href="#/article/">インタビュー</a></li>
-    <li><a href="#/calendar/">イベントカレンダー</a></li>
+    <li><a href="#!">ホーム</a></li>
+    <li><a href="#!/article/">インタビュー</a></li>
+    <li><a href="#!/calendar/">イベントカレンダー</a></li>
     <!--
     <li class="dropdown">
       <a href="#" data-toggle="dropdown" class="dropdown-toggle">全国一覧情報</a>
@@ -24,6 +24,6 @@
       </ul>
     </li>
     -->
-    <li><a href="#/article/?p=12">お問い合わせ</a></li>
+    <li><a href="#!/article/?p=12">お問い合わせ</a></li>
   </ul>
 </div>
