--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -1,6 +1,6 @@
 <div id="rNavi" class="col-md-3 col-sm-12">
   <div class="site-title">
-    <h1><a href="#!">Hackathon Event Info</a></h1>
+    <h1><a href="#!">Hackathon Style Info</a></h1>
   </div>
   <p>Hackathon(ハッカソン)まとめ</p>
   
