--- a/partials/index.html
+++ b/partials/index.html
@@ -17,7 +17,7 @@
 	  -->
       <div class="col-md-4">
 	<div class="content">
-	  <h2><a href="#!/calendar/">【一覧】カレンンダー </a></h2>
+	  <h2><a href="#!/calendar/">【一覧】カレンダー </a></h2>
 	</div>
       </div>
 
