インタビュー to 最近の投稿

--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -6,7 +6,7 @@
   
   <ul class="nav nav-pills nav-stacked">
     <li><a href="#!">ホーム</a></li>
-    <li><a href="#!/article/">インタビュー</a></li>
+    <li><a href="#!/article/">最近の投稿</a></li>
     <li><a href="#!/calendar/">イベントカレンダー</a></li>
     <li><a href="#!/article/?p=12">お問い合わせ</a></li>
   </ul>
