--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -4,6 +4,10 @@
   </div>
   <p>Hackathon(ハッカソン)まとめ</p>
   <div class="fb-like" data-href="http://hackathon.style-info.org/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+
+  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hackathon.style-info.org/" data-text="ハッカソン情報満載" data-lang="ja" data-hashtags="HackathonStyle">ツイート</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
   <ul class="nav nav-pills nav-stacked">
     <li><a href="#!">ホーム</a></li>
     <li><a href="#!/article/">最近の投稿</a></li>
