--- a/partials/eventlist.html
+++ b/partials/eventlist.html
@@ -2,7 +2,7 @@
   <div id="contents" class="col-md-8 col-sm-12">
     <h2>Hackathon Event List</h2>
     <div ng-repeat="entry in entrys">
-      <a href="#/event/{{getID(entry.id.$t)}}"><h3>{{entry.title.$t}}</h3></a>
+      <a href="#!/event/{{getID(entry.id.$t)}}"><h3>{{entry.title.$t}}</h3></a>
     </div>
   </div>
   <div class="col-md-1">
