--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -15,6 +15,7 @@
     <li><a href="#!/article/?p=12">お問い合わせ</a></li>
   </ul>
 
-  
+  <a class="twitter-timeline" href="https://twitter.com/search?q=%23HackathonStyle" data-widget-id="457086892723277824">‪#‎HackathonStyle‬ に関するツイート</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 </div>
