--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -1,16 +1,10 @@
 <div id="rNavi" class="col-md-12 col-sm-12">
-  <div class="site-title" style="float:left;">
-    <h1><a href="#!">Hackathon Style Info</a></h1>
-    <p>Hackathon(ハッカソン)まとめ</p>
-  </div>
-
-  <ul class="nav nav-pills">
+  <ul class="nav nav-pills" style="float:none">
+    <li><h1>Hackathon Style Info</h1></li>
     <li><a href="#!">ホーム</a></li>
     <li><a href="#!/article/">最近の投稿</a></li>
     <li><a href="#!/calendar/">イベントカレンダー</a></li>
     <li><a href="#!/article/?p=12">お問い合わせ</a></li>
   </ul>
-
-  <div class="fb-like" data-href="http://hackathon.style-info.org/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
-
+  <p>Hackathon(ハッカソン)まとめ</p>
 </div>
