--- a/partials/template/footer.html
+++ b/partials/template/footer.html
@@ -1,6 +1,22 @@
+<div class="row">
+  <div class="col-md-4">
+    <a class="twitter-timeline" href="https://twitter.com/search?q=%23HackathonStyle" data-widget-id="457086892723277824">‪#‎HackathonStyle‬ に関するツイート</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  </div>
 
-  <a class="twitter-timeline" href="https://twitter.com/search?q=%23HackathonStyle" data-widget-id="457086892723277824">‪#‎HackathonStyle‬ に関するツイート</a>
-  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hackathon.style-info.org/" data-text="ハッカソン情報満載" data-lang="ja" data-hashtags="HackathonStyle">ツイート</a>
+  <div class="col-md-4">
+    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hackathon.style-info.org/" data-text="ハッカソン情報満載" data-lang="ja" data-hashtags="HackathonStyle">ツイート</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+<div class="fb-like" data-href="http://hackathon.style-info.org/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+  </div>
+
+  <div ng-controller="recentEvent"  class="col-md-4" style="background-color:#fff;">
+    <h3>最近登録されたEvent</h3>
+    <div ng-repeat=" entry in newEntry">
+      <a href="#!/event/{{getID(entry.id.$t)}}"><h3>{{entry.title.$t}}</h3></a>
+      </div>
+    <span class="pull-right"><a href="#!/event/more">More</a></span>
+  </div>
+</div>
+
