--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -1,10 +1,16 @@
 <div id="rNavi" class="col-md-12 col-sm-12">
   <ul class="nav nav-pills" style="float:none">
-    <li><h1>Hackathon Style Info</h1></li>
+    <li><h1><a href="#!">Hackathon Style Info</h1></a></li>
     <li><a href="#!">ホーム</a></li>
     <li><a href="#!/article/">最近の投稿</a></li>
     <li><a href="#!/calendar/">イベントカレンダー</a></li>
     <li><a href="#!/article/?p=12">お問い合わせ</a></li>
   </ul>
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hackathon.style-info.org/" data-text="ハッカソン情報満載" data-lang="ja" data-hashtags="HackathonStyle">ツイート</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+<div class="fb-like" data-href="http://hackathon.style-info.org/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+
   <p>Hackathon(ハッカソン)まとめ</p>
 </div>
