--- a/partials/template/footer.html
+++ b/partials/template/footer.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
   <div class="col-md-4">
     <a class="twitter-timeline" href="https://twitter.com/search?q=%23HackathonStyle" data-widget-id="457086892723277824">‪#‎HackathonStyle‬ に関するツイート</a>
@@ -29,3 +30,4 @@
 </div>
 </div>
 
+</div>
