--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,5 @@
 body{
     //background-color:#FBFCF2;
-    background-image: url("../images/haikei.png");
-    background-repeat:no-repeat;
-    background-attachment: fixed;
-    background-position: center
 }
 .site-title{
     font-color:#595959;
@@ -12,7 +8,12 @@ body{
     background-color:#ffffff;
 }
 #rNavi{
-    background-color:#FBFCF2;
+    background-image: url("../images/haikei.png");
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+    background-position: center
+
+//    background-color:#FBFCF2;
     padding: 0 30px;
 }
 
@@ -61,6 +62,10 @@ body{
 #rNavi #twitter-widget-0{
     margin-bottom: 30px;
 }
+#rNavi .twitter{
+    border-bottom: none;
+}
+
 #regionButton{
     margin-top:50px;
 }
