--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -1,6 +1,5 @@
-<div id="rNavi" class="col-md-12 col-sm-12">
-  <ul class="nav nav-pills" style="float:none">
-    <li><h1><a href="#!">Hackathon Style Info</h1></a></li>
+<div id="rNavi">
+  <ul class="nav nav-pills">
     <li><a href="#!">ホーム</a></li>
     <li><a href="#!/article/">最近の投稿</a></li>
     <li><a href="#!/calendar/">イベントカレンダー</a></li>
