Fix Event Information

--- a/partials/event.html
+++ b/partials/event.html
@@ -1,4 +1,4 @@
-<div id="event">
+<div id="event" class="container">
   <div id="contents" class="col-md-12 col-sm-12">
     <div>
       <a href="#!/calendar"><<カレンダーに戻る</a>
