Fix Calendar Design

--- a/partials/calendar.html
+++ b/partials/calendar.html
@@ -16,7 +16,7 @@
   </div>
 </script>
 
-<div>
+<div class="container">
   <div id="regionButton">
     <span ng-repeat="r in regionOrder" style="width:300px;background-color:{{region[r].color}};color:{{region[r].font_color}};padding:10px 10px;margin: 10px 0px;">
       <a href ng-click="clickRegion(r,myCalendar1)" style="color:{{region[r].font_color}};">{{r}}</a>
