Fix Article Dom

--- a/partials/article.html
+++ b/partials/article.html
@@ -1,10 +1,6 @@
-<div id="article">
-  <div id="contents" class="col-md-12 col-sm-12">
-    <div class="row">
+<div id="article" class="container">
+  <div id="contents">
       <div ng-include="url"></div>
-    </div>
-  </div>
-  <div class="col-md-1">
   </div>
 </div>
 
