--- a/partials/index.html
+++ b/partials/index.html
@@ -1,10 +1,6 @@
 <div id="index">
-  <div class="container">
-    <div id="contents" class="col-md-12 col-sm-12">
-      <div style="background-color:#FFF;padding: 25px 15px;" ng-controller="CalendarCtrl">
-	<div class="calendar" ng-model="eventSources" calendar="myCalendar1" config="uiConfig.calendar" ui-calendar="uiConfig.calendar" style="width:auto;opacity:1.0;background:rgba(255,255,255,1.0);"></div>
-      </div>
-    </div>
+  <div id="contents" class="container" style="background-color:#FFF;padding: 25px 15px;" ng-controller="CalendarCtrl">
+    <div class="calendar" ng-model="eventSources" calendar="myCalendar1" config="uiConfig.calendar" ui-calendar="uiConfig.calendar" style="width:auto;opacity:1.0;background:rgba(255,255,255,1.0);"></div>
   </div>
 </div>
 
