Add Region Button in Toppage

--- a/partials/index.html
+++ b/partials/index.html
@@ -1,6 +1,16 @@
 <div id="index">
-  <div id="contents" class="container" style="background-color:#FFF;padding: 25px 15px;" ng-controller="CalendarCtrl">
-    <div class="calendar" ng-model="eventSources" calendar="myCalendar1" config="uiConfig.calendar" ui-calendar="uiConfig.calendar" style="width:auto;opacity:1.0;background:rgba(255,255,255,1.0);"></div>
+  <div id="contents" class="container" style="background-color:#FFF;padding: 0px 15px;" ng-controller="CalendarCtrl">
+    <div id="regionButton">
+      <span ng-repeat="r in regionOrder" style="width:300px;background-color:{{region[r].color}};color:{{region[r].font_color}};padding:10px 10px;margin: 10px 0px;">
+	<a href ng-click="clickRegion(r,myCalendar1)" style="color:{{region[r].font_color}};">{{r}}</a>
+      </span>
+      <span style="background-color:#000;color:#fff;padding:10px 10px;margin: 10px 0px;">
+	<a href ng-click="clickRegion(undefined,myCalendar1)" style="color:#fff;">全部</a>
+      </span>
+
+    </div>
+
+    <div id="calender" class="calendar" ng-model="eventSources" calendar="myCalendar1" config="uiConfig.calendar" ui-calendar="uiConfig.calendar"></div>
   </div>
 </div>
 
