--- a/partials/index.html
+++ b/partials/index.html
@@ -1,5 +1,5 @@
 <div id="index">
-  <div id="contents" class="container" style="background-color:#FFF;padding: 0px 15px;" ng-controller="CalendarCtrl">
+  <div id="contents" class="container" style="padding: 0px 15px;" ng-controller="CalendarCtrl">
     <div id="regionButton">
       <span ng-repeat="r in regionOrder" style="width:300px;background-color:{{region[r].color}};color:{{region[r].font_color}};padding:10px 10px;margin: 10px 0px;">
 	<a href ng-click="clickRegion(r,myCalendar1)" style="color:{{region[r].font_color}};">{{r}}</a>
@@ -7,7 +7,6 @@
       <span style="background-color:#000;color:#fff;padding:10px 10px;margin: 10px 0px;">
 	<a href ng-click="clickRegion(undefined,myCalendar1)" style="color:#fff;">全部</a>
       </span>
-
     </div>
 
     <div id="calender" class="calendar" ng-model="eventSources" calendar="myCalendar1" config="uiConfig.calendar" ui-calendar="uiConfig.calendar"></div>
