--- a/partials/calendar.html
+++ b/partials/calendar.html
@@ -24,10 +24,8 @@
     <span style="background-color:#000;color:#fff;padding:10px 10px;margin: 10px 0px;">
       <a href ng-click="clickRegion(undefined,myCalendar1)" style="color:#fff;">全部</a>
     </span>
-
   </div>
 
-  <div id="calender" class="col-md-12 col-sm-12">
-    <div class="calendar" ng-model="eventSources" calendar="myCalendar1" config="uiConfig.calendar" ui-calendar="uiConfig.calendar" style="width:auto;"></div>
-  </div>
+
+  <div  id="calender" class="calendar" ng-model="eventSources" calendar="myCalendar1" config="uiConfig.calendar" ui-calendar="uiConfig.calendar" style="width:auto;"></div>
 </div>
