--- a/partials/calendar.html
+++ b/partials/calendar.html
@@ -11,8 +11,8 @@
 
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-primary" ng-click="ok()">Close</button>
+    
   </div>
 </script>
 
