--- a/css/main.css
+++ b/css/main.css
@@ -156,9 +156,11 @@ body{
 #article #contents article{
     padding-left: 10px;
     padding-bottom:20px;
+    padding-top: 10px;
 }
 #article #contents nav{
     padding-bottom:20px;
+    padding-left: 5px;
 }
 #article #contents nav h1{
     font-size:20px;
