--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -1,11 +1,18 @@
+<div id="header">
+<ul class="nav nav-pills">
+    <li><h1 class="text-center"><a href="#!/">Hackathon Style Info</a></h1></li>
+    <li class="fb-like" style="border-bottom:none;" data-href="http://hackathon.style-info.org/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></li>    
+    <li class="twitter" style="border-bottom:none;"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hackathon.style-info.org/" data-text="ハッカソン情報満載" data-lang="ja" data-hashtags="HackathonStyle">ツイート</a></li>
+  </ul>
+</div>
 <div id="rNavi">
+
   <ul class="nav nav-pills">
     <li><a href="#!">ホーム</a></li>
     <li><a href="#!/article/">最近の投稿</a></li>
     <li><a href="#!/calendar/">イベントカレンダー</a></li>
     <li><a href="#!/article/?p=12">お問い合わせ</a></li>
-    <li class="twitter" style="border-bottom:none;"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hackathon.style-info.org/" data-text="ハッカソン情報満載" data-lang="ja" data-hashtags="HackathonStyle">ツイート</a></li>
-    <li class="fb-like" style="border-bottom:none;" data-href="http://hackathon.style-info.org/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></li>    
+    
   </ul>
 
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
