--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body{
     height:100%;
-    background: url(../images/backgroundImg.jpg) no-repeat center center fixed;
+    background: url("../images/backgroundImg.jpg") no-repeat center center fixed;
 }
 #header h1{
     color:#fff;
