--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,12 @@ body{
     padding-top:20px;
 }
 
+#information{
+    margin-top: 10px;
+    padding:10px 0px;
+    background:rgba(255,255,255,0.9);
+}
+
 
 #regionButton{
     margin-top:50px;
