--- a/partials/template/footer.html
+++ b/partials/template/footer.html
@@ -1,33 +1,37 @@
 <div class="container">
-<div class="row">
-  <div class="col-md-4">
-    <a class="twitter-timeline" href="https://twitter.com/search?q=%23HackathonStyle" data-widget-id="457086892723277824">‪#‎HackathonStyle‬ に関するツイート</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <a class="twitter-timeline" href="https://twitter.com/search?q=%23HackathonStyle" data-widget-id="457086892723277824">‪#‎HackathonStyle‬ に関するツイート</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </div>
 
-  <div ng-controller="regionEventCtrl" class="col-md-4">
-    <div style="background-color:#FFF;">
-      <h3>地域別情報</h3>
-      <ul class="nav nav-pills nav-stacked" style="list-style-type: none;">
-	
-	<li ng-repeat="entry in regions" style="">
-	  <a href="#!/calendar/{{entry}}">{{entry}}</a>
-	</li>
-      </ul>
+    <div ng-controller="regionEventCtrl" class="col-md-4">
+      <div style="background-color:#FFF;">
+	<h3>地域別情報</h3>
+	<ul class="nav nav-pills nav-stacked" style="list-style-type: none;">
+	  
+	  <li ng-repeat="entry in regions" style="">
+	    <a href="#!/calendar/{{entry}}">{{entry}}</a>
+	  </li>
+	</ul>
+      </div>
+    </div>
+
+    <div ng-controller="recentEvent"  class="col-md-4">
+      <div style="background-color:#fff;">
+	<h3>最近登録されたEvent</h3>
+	<ul class="nav nav-pills nav-stacked" style="list-style-type: none;">
+	  <li ng-repeat=" entry in newEntry">
+	    <a href="#!/event/{{getID(entry.id.$t)}}"><h5>{{entry.title.$t}}</h5></a>
+	  </li>
+	</ul>
+	<p><a href="#!/event/more">More</a></p>
+      </div>
     </div>
   </div>
-
-  <div ng-controller="recentEvent"  class="col-md-4">
-    <div style="background-color:#fff;">
-      <h3>最近登録されたEvent</h3>
-      <ul class="nav nav-pills nav-stacked" style="list-style-type: none;">
-	<li ng-repeat=" entry in newEntry">
-	  <a href="#!/event/{{getID(entry.id.$t)}}"><h5>{{entry.title.$t}}</h5></a>
-	</li>
-      </ul>
-      <p><a href="#!/event/more">More</a></p>
-    </div>
-</div>
 </div>
 
+
+<div id="information" class="text-center">
+  <p>Copyright (C) 2002 - 2014 <a href="https://twitter.com/KFuji11">K.Fuji</a> and <a href="https://twitter.com/samui_">samui</a> All Rights Reserved. </p>
 </div>
