Fix footer year

--- a/partials/template/footer.html
+++ b/partials/template/footer.html
@@ -33,5 +33,5 @@
 
 
 <div id="information" class="text-center">
-  <p>Copyright (C) 2002 - 2014 <a href="https://twitter.com/KFuji11">K.Fuji</a> and <a href="https://twitter.com/samui_">samui</a> All Rights Reserved. </p>
+  <p>Copyright (C) 2014 <a href="https://twitter.com/KFuji11">K.Fuji</a> and <a href="https://twitter.com/samui_">samui</a> All Rights Reserved. </p>
 </div>
