Fix Loading Background

--- a/partials/article.html
+++ b/partials/article.html
@@ -1,5 +1,5 @@
 <div id="article" class="container">
-  <div id="loading" class="text-center" style="background-color:#FFF;">
+  <div id="loading" class="text-center" style="background:rgba(255,255,255,0.6);margin-top:10px;">
     <img src="./images/ajax-loader.gif">
   </div>
   <div id="contents">
