--- a/partials/article.html
+++ b/partials/article.html
@@ -3,7 +3,8 @@
     <img src="./images/ajax-loader.gif">
   </div>
   <div id="contents">
-      <div ng-include="url" onload='hideLoad()'></div>
+      <div ng-include="url" onload='hideLoad()'>
+      </div>
   </div>
 </div>
 
