--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -10,9 +10,22 @@
   <ul class="nav nav-pills">
     <li><a href="#!">ホーム</a></li>
     <li><a href="#!/article/">最近の投稿</a></li>
-    <li><a href="#!/calendar/">イベントカレンダー</a></li>
+
+    <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">イベントカレンダー<b class="caret"></b></a>
+      <ul class="dropdown-menu">
+    	<li><a href="#!/calendar/">全部</a></li>
+	<li><a href="#!/calendar/北海道">北海道</a></li>
+	<li><a href="#!/calendar/東北">東北</a></li>
+	<li><a href="#!/calendar/関東">関東</a></li>
+    	<li><a href="#!/calendar/中部">中部</a></li>
+	<li><a href="#!/calendar/関西">関西</a></li>
+	<li><a href="#!/calendar/中国">中国</a></li>
+	<li><a href="#!/calendar/四国">四国</a></li>
+	<li><a href="#!/calendar/九州">九州</a></li>
+      </ul>
+    </li>
     <li><a href="#!/article/?p=12">お問い合わせ</a></li>
-    
+
   </ul>
 
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
