--- a/partials/template/footer.html
+++ b/partials/template/footer.html
@@ -5,14 +5,15 @@
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
 
-    <div ng-controller="regionEventCtrl" class="col-md-4">
+    <div ng-controller="recentStartEvent"  class="col-md-4">
       <div  style="background-color:#FFF;padding: 10px 10px;">
-	<h3>地域別情報</h3>
+	<h3>もうすぐはじまるEvent</h3>
 	<ul class="nav nav-pills nav-stacked" style="list-style-type: none;">
-	  <li ng-repeat="entry in regions" style="">
-	    <a href="#!/calendar/{{entry}}">{{entry}}</a>
+	  <li ng-repeat=" entry in newEntry">
+	    <a href="#!/event/{{getID(entry.id.$t)}}"><h5>{{entry.title.$t}}</h5></a>
 	  </li>
 	</ul>
+	<p><a href="#!/event/more">More</a></p>
       </div>
     </div>
 
