--- a/partials/template/navbar.html
+++ b/partials/template/navbar.html
@@ -10,7 +10,8 @@
   <ul class="nav nav-pills">
     <li><a href="#!">ホーム</a></li>
     <li><a href="#!/article/">最近の投稿</a></li>
-
+    <li><a href="http://hackathon.style-info.org/#!/article/?p=244">ハッカソンとは？</a></li>
+    <li><a href="http://hackathon.style-info.org/#!/article/?cat=2">まとめ記事</a></li>
     <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">イベントカレンダー<b class="caret"></b></a>
       <ul class="dropdown-menu">
     	<li><a href="#!/calendar/">全部</a></li>
